feat: Update waste classification to support 10 categories and adjust related scripts

--- a/notebooks/scan_image.ipynb
+++ b/notebooks/scan_image.ipynb
@@ -11,12 +11,12 @@
     "\n",
     "**Usage**: Run cells sequentially (1 → 2 → 3)\n",
     "\n",
-    "**Requirements**: Trained model at `../models/best.pt`"
+    "**Requirements**: Trained model at `../models/best_model.pt`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5870d45f",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
     "from ultralytics import YOLO\n",
     "\n",
     "# Load model\n",
-    "MODEL_PATH = '../models/20251223_235651_best.pt'\n",
+    "MODEL_PATH = '../models/best_model.pt'\n",
     "if not Path(MODEL_PATH).exists():\n",
     "    print(f\"❌ Model not found: {MODEL_PATH}\")\n",
     "    print(\"   Train model first: python train.py\")\n",
